--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,11 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        api:
+            pattern: ^/api/v1/
+            stateless: true
+            custom_authenticator: App\Security\ApiKeyAuthenticator
+            provider: app_user_provider
         main:
             form_login:
                     login_path: app_login
@@ -51,6 +56,10 @@ security:
         - { path: ^/post, roles: ROLE_USER }
         - { path: ^/photo, roles: ROLE_USER }
         - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/api/v1/auth/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api/v1/auth/register, roles: PUBLIC_ACCESS }
+        - { path: ^/api/doc, roles: ROLE_ADMIN }
+        - { path: ^/api/v1, roles: ROLE_USER }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
